Fix wrong h1 color in dark mode

--- a/Mako/Mako.Web/wwwroot/css/pages/Worker.scss
+++ b/Mako/Mako.Web/wwwroot/css/pages/Worker.scss
@@ -2,6 +2,10 @@
 
 header {
     background-color: var(--secondary-color);
+
+    h1 {
+        color: var(--title-color);
+    }
 }
 
 h2 {
